# aoc-2021

kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/aoc/: Main.kt
kotlin/app/src/main/kotlin/aoc/common/: Input.kt  Problem.kt  ProblemSolver.kt  Solver.kt
kotlin/app/src/main/kotlin/aoc/day1/: Day1Solver.kt
kotlin/app/src/main/kotlin/aoc/day2/: Day2Solver.kt
kotlin/app/src/main/kotlin/aoc/days/day1/: Day1Solver.kt
kotlin/app/src/main/kotlin/aoc/days/day2/: Day2Solver.kt
kotlin/app/src/main/kotlin/aoc/days/day3/: Day3Solver.kt
rust/: Cargo.toml
rust/src/: common.rs  day1.rs  input.rs  main.rs  solver.rs
rust/src/days/: day2.rs  mod.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: app.ts  common.ts  day1.ts  day2.ts  day3.ts  solver.ts
typescript/src/days/: day1.ts  day2.ts  day3.ts
