[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
lazy_static = "1.4.0"
text_io = "0.1.9"
tokio = { version = "1.15.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "io-std",
    "io-util",
] }
